k8s/ms-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mssql
  template:
    metadata:
      labels:
        component: mssql
    spec:
      # Sets up the request on the pod to reach out to kubernetes saying I need some types of long term storage
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            # From the database-persistent-volume-claim.yaml
            claimName: database-formbuilder-persistent-volume-claim
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu # 2017-latest-ubuntu # postgres # Change this!!!
          ports:
            - containerPort: 1433
          # Here is how I want to use it(pvc) inside my container
          volumeMounts:
              # Volumes has to be identical with volumeMounts
            - name: mssql-storage
              # Where inside the container should the storage be made availble
              # This will actually be stored inside the volumes. Has to be default storage path for the db
              mountPath: /var/opt/mssql
                #- name: mssql-storage
                  # mountPath: /var/opt/mssql
              # DELETE THIS WHEN EVERYTHING WORKS!!!!
              # This is only for postgres. Any data that is stored inside the mountPath is stored in a folder called postgres inside the PVC
              # subPath: postgres
