k8s/formbuilder-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formbuilder-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5001
      targetPort: 5001
